# motus

./: .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CODEOWNERS  README.md  install.sh  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 🐞bug-report.yml  🚀feature-request.yml
.github/workflows/: format-and-unit-tests.yml
docs/: .nav.yml  docs.json  index.md  introduction.mdx  plan.md  style.css
docs/cloud/: overview.mdx  python-client.mdx
docs/concepts/: agents.mdx  memory.mdx  models.mdx  overview.mdx  sandbox.mdx  skills.mdx  todo-sandbox.mdx  tools.mdx  workflow.mdx
docs/contributing/: development-setup.mdx
docs/getting-started/: installation.md  installation.mdx  quickstart.mdx
docs/guides/: deployment.mdx  guardrails.mdx  human-in-the-loop.mdx  mcp-integration.mdx  multi-agent.mdx  plugin.mdx  plugins.mdx  serving.mdx  tracing.mdx  untitled-page.mdx
docs/integrations/: anthropic-sdk.mdx  anthropic.md  google-adk.md  google-adk.mdx  openai-agents.md  openai-agents.mdx
docs/user-guide/: cloud-client.md  overview.md
examples/: .gitignore  README.md  agent.py  cloud_client.py  mcp_tools.py  memory.py
examples/anthropic/: README.md  mcp_tool_runner.py  search_tool.py  tools_runner.py
examples/cloud_client/: quickstart.py
examples/deep_research/: pyproject.toml
examples/deep_research/deep_research/: __init__.py
examples/deep_research/deep_research/claude/: __main__.py  agent.py  serve.py
examples/deep_research/deep_research/common/: prompts.py  utils.py
examples/deep_research/deep_research/google_adk/: __main__.py  agent.py  serve.py
examples/deep_research/deep_research/motus_native/: __main__.py  config.py  elicitation.py  researcher.py  schemas.py  serve.py
examples/deep_research/deep_research/openai_agents/: __main__.py  agent.py  serve.py
examples/google_adk/: README.md  agent.py  callbacks.py  fields_output_schema.py  mcp_streamablehttp_agent.py  multi_agent.py  multimodal_tools.py  parallel_functions.py  parallel_tools.py  pydantic_argument.py  pydantic_tools.py  requirements.txt  static_instruction.py  structured_output.py  token_usage.py  workflow_triage.py
examples/openai_agents/: README.md  agents_as_tools.py  agents_as_tools_structured.py  llm_as_a_judge.py  mcp_streamablehttp_remote_example.py  message_filter.py  output_guardrails.py  requirements.txt  routing.py  tool_guardrails.py  tools.py
examples/runtime/: agent_as_tool.py  hooks_demo.py  resilient_tasks.py  task_graph_demo.py
examples/serving/: agent_entrypoint.py  chat_completions.py  custom_entrypoint.py  hitl_agent.py  motusclaw.py  scheduled_agent.py
plugins/: README.md  motus
scripts/: test_motusclaw.sh
src/motus/: __init__.py  __main__.py  cli.py  cli_setup.py  config.py  guardrails.py  version_check.py
tests/: README.md  test_executor_exit.py
tests/examples/: conftest.py  test_cloud_client_quickstart.py
tests/third_party_compat/: cloud_deploy_test.py  run_examples.py  serve_adapter.py  (+1 more)
(+232 files in other folders)
